// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DatabaseConfigurationModal/> Editable 1`] = `
<Modal
  footer={
    <Memo
      sticky={false}
    >
      <button
        className="labkey-button"
        onClick={[Function]}
        type="button"
      >
        Cancel
      </button>
      <a
        className="modal__help-link"
        href={null}
        rel="noopener noreferrer"
        target="_blank"
      >
        More about authentication
      </a>
      <button
        className="labkey-button primary"
        onClick={[Function]}
        type="button"
      >
        Apply
      </button>
    </Memo>
  }
  onCancel={[Function]}
  title="Configure Database Authentication"
>
  <div
    className="database-modal__field-row"
  >
    <span>
      Password Strength:
    </span>
    <span
      className="database-modal__field"
    >
      <select
        className="form-control"
        disabled={false}
        name="strength"
        onChange={[Function]}
        value=""
      />
    </span>
  </div>
  <div
    className="bold-text"
  />
  <div>
    <div
      dangerouslySetInnerHTML={
        {
          "__html": false,
        }
      }
    />
  </div>
  <br />
  <div
    className="database-modal__field-row"
  >
    <span>
      Password Expiration:
    </span>
    <span
      className="database-modal__field"
    >
      <select
        className="form-control"
        name="expiration"
        onChange={[Function]}
        placeholder="select"
        value=""
      >
        <option
          key="Never"
          value="Never"
        >
          Never
        </option>
        <option
          key="FiveSeconds"
          value="FiveSeconds"
        >
          Every five seconds — for testing
        </option>
        <option
          key="ThreeMonths"
          value="ThreeMonths"
        >
          Every three months
        </option>
        <option
          key="SixMonths"
          value="SixMonths"
        >
          Every six months
        </option>
        <option
          key="OneYear"
          value="OneYear"
        >
          Every twelve months
        </option>
      </select>
    </span>
  </div>
</Modal>
`;

exports[`<DatabaseConfigurationModal/> View-only 1`] = `
<Modal
  footer={
    <Memo
      sticky={false}
    >
      <button
        className="labkey-button"
        onClick={[Function]}
        type="button"
      >
        Close
      </button>
      <a
        className="modal__help-link"
        href={null}
        rel="noopener noreferrer"
        target="_blank"
      >
        More about authentication
      </a>
    </Memo>
  }
  onCancel={[Function]}
  title="Configure Database Authentication"
>
  <div
    className="database-modal__field-row"
  >
    <span>
      Password Strength:
    </span>
    <span
      className="database-modal__field"
    >
      <select
        className="form-control"
        disabled={true}
        name="strength"
        onChange={[Function]}
        value=""
      />
    </span>
  </div>
  <div
    className="bold-text"
  />
  <div>
    <div
      dangerouslySetInnerHTML={
        {
          "__html": false,
        }
      }
    />
  </div>
  <br />
  <div
    className="database-modal__field-row"
  >
    <span>
      Password Expiration:
    </span>
    <span
      className="database-modal__field"
    />
  </div>
</Modal>
`;
